# skypro_dz29

./: db.sqlite3  manage.py  pyproject.toml  utils.py
ads/: models.py
ads/ad/: serializers.py  urls.py  views.py
ads/category/: views.py
skypro_dz29/: asgi.py  settings.py  urls.py  wsgi.py
users/: models.py
users/user/: serializers.py  urls.py  views.py
